# odri_ros2

./: .clang-format  README.md
odri_examples/: CMakeLists.txt  package.xml
odri_examples/config/robots/: separate_legs.yaml
odri_examples/include/odri_examples/: example_driver.hpp  example_robot.hpp
odri_examples/launch/: example_driver.py  example_robot.launch.py  example_robot.py
odri_examples/src/: example_driver.cpp  example_robot.cpp
odri_interface/: CMakeLists.txt  package.xml
odri_interface/config/: flying_arm_2.yaml  params.yaml
odri_interface/config/robots/: flying_arm_2.yaml
odri_interface/include/odri_interface/: master_board_wrapper.hpp  robot_interface.hpp
odri_interface/launch/: _robot_interface.launch.py  master_board.py  robot_interface.launch.py  robot_interface.py
odri_interface/src/: master_board_wrapper.cpp  robot_interface.cpp
odri_msgs/: CMakeLists.txt  package.xml
odri_msgs/interfaces/msg/: DriverCommand.msg  DriverState.msg  MasterBoardCommand.msg  MasterBoardState.msg  MotorCommand.msg  MotorCommands.msg  MotorState.msg  RobotState.msg
odri_msgs/interfaces/srv/: TransitionCommand.srv
odri_ros2_examples/: CMakeLists.txt
odri_ros2_examples/include/odri_examples/: example_robot.hpp
odri_ros2_examples/src/: example_robot.cpp
odri_ros2_gazebo/: CMakeLists.txt  package.xml
odri_ros2_gazebo/include/odri_ros2_gazebo/: odri_gz_plugin.hpp
odri_ros2_gazebo/src/: odri_gazebo_plugin.cpp  odri_gz_plugin.cpp
odri_ros2_gz/: CMakeLists.txt  package.xml
odri_ros2_gz/include/odri_ros2_gazebo/: odri_gz_plugin.hpp
odri_ros2_gz/src/: odri_gz_plugin.cpp
odri_ros2_hardware/: CMakeLists.txt
odri_ros2_hardware/include/odri_ros2_hardware/: robot_interface.hpp
odri_ros2_hardware/src/: robot_interface.cpp
odri_ros2_interfaces/: CMakeLists.txt  README.md
odri_ros2_interfaces/interfaces/msg/: MotorState.msg
odri_ros2_msgs/: CMakeLists.txt  package.xml
odri_ros2_msgs/interfaces/msg/: DriverCommand.msg  DriverState.msg  MasterBoardCommand.msg  MasterBoardState.msg  RobotCommand.msg  RobotFullState.msg  RobotState.msg
